force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Count__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>