force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>