force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Grouping_1__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Grouping_1__c</fullName>
    <label>Grouping 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>