force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Min__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Min__c</fullName>
    <label>Min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>