force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Send_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Send_Date_Time__c</fullName>
    <label>Send Date Time</label>
    <type>DateTime</type>
</CustomField>