force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>