force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>