force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Unique_Name__c</fullName>
    <externalId>true</externalId>
    <label>Unique Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>