force-app/main/default/objects/nBIDC__BI_Data__c/fields/nBIDC__Value__c.field-meta.xml
<CustomField>
    <fullName>nBIDC__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>