force-app/main/default/objects/nBIDC__BI_Data__c/listViews/nBIDC__All.listView-meta.xml
<ListView>
    <fullName>nBIDC__All</fullName>
    <columns>NAME</columns>
    <columns>nBIDC__Unique_Name__c</columns>
    <columns>nBIDC__Count__c</columns>
    <columns>nBIDC__Max__c</columns>
    <columns>nBIDC__Min__c</columns>
    <columns>nBIDC__Average__c</columns>
    <columns>nBIDC__Sum__c</columns>
    <columns>nBIDC__Value__c</columns>
    <columns>nBIDC__Grouping_1__c</columns>
    <columns>nBIDC__Grouping_2__c</columns>
    <columns>nBIDC__Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>